--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -11,6 +11,10 @@
     padding: 20px;
 }
 
+.item:hover {
+    border-width: 2px;
+}
+
 .completed {
     text-decoration: line-through;
     border: 1px solid #47ca43;
@@ -29,4 +33,9 @@ button {
 
 .remove-btn {
     border-radius: 0 5px 5px 0;
+}
+
+
+a {
+    color: #000000;
 }
