--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,19 +5,24 @@
 }
 
 .sidebar {
-    width: 20%;
-    height: 100vh;
+    width: 15%;
+    height: auto;;
     background: #fcfcfc;
     padding: 10px;
     overflow: auto;
+    position: fixed;
+    margin-top: 30px;
+    border-radius: 5px;
 }
 
 .page {
     width: 80%;
     height: 100vh;
+    margin-left: 15%;
     overflow: auto;
 }
 
 ul {
     list-style: none;
+    margin: 15px auto;
 }
